refactor: final type and refactor Arrays.asList to List.of